tests/ui/consts/const-eval/const_panic-normalize-tabs-115498.stderr
error[E0080]: evaluation panicked:     
  --> $DIR/const_panic-normalize-tabs-115498.rs:3:17
   |
LL | struct Bug([u8; panic!{"\t"}]);
   |                 ^^^^^^^^^^^^ evaluation of `Bug::0::{constant#0}` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
